--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,8 +1,8 @@
 1. add option to make an appointment 
-2. rotate the model by touching it 
+2. rotate the model by touching it 				(done, but could be improved)
 3. zoom in / out ? 
 4. different colors for injuries (e.g. green if recovered)
-5. instant change of spheres if you select the year 
+5. instant change of spheres if you select the year 		(done)
 6. profile of user
 
 Provide current state report on May 10th. 
